2008-09-16  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Content/TextEditorExtension.cs,
	  MonoDevelop.Ide.Gui/Document.cs: Prepared code completion unit
	  tests.

2008-09-16  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Components/TransactedTreeBuilder.cs: Make sure
	  the current navigator position is restored when a move operation
	  fails.

2008-09-15  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui/Document.cs: changed document update.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/MonoDevelop.Ide.SelectEncodingsDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.EncapsulateFieldDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.ExportProjectDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.GoToDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.ReplaceDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.BreakpointPropertiesDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.TasksPanelWidget.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.CodeGenerationPanelWidget.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewLayoutDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.AddinLoadErrorDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewFileDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.IDEStyleOptionsPanelWidget.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.BuildPanelWidget.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.SelectReferenceDialog.cs,
	  gtk-gui/MonoDevelop.Ide.CodeTemplates.CodeTemplatePanelWidget.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.KeyBindingsPanel.cs,
	  gtk-gui/gui.stetic, gtk-gui/MonoDevelop.Ide.DocumentSwitcher.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.AttachToProcessDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.IncludeFilesDialog.cs,
	  gtk-gui/objects.xml,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.GotoLineDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewProjectDialog.cs,
	  gtk-gui/MonoDevelop.Ide.ExternalTools.ExternalToolPanelWidget.cs,
	  gtk-gui/generated.cs,